modules/eks-cluster-stack/configs/istio_peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: peerauthentication
  namespace: istio-system
spec:
  mtls:
    mode: PERMISSIVE
