modules/eks-cluster-stack/configs/master_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-${environment}-${app_type}-ingress
  labels:
    app: dashboard
  annotations:
    alb.ingress.kubernetes.io/scheme: ${scheme}
    alb.ingress.kubernetes.io/group.name: ${app_type}
    alb.ingress.kubernetes.io/certificate-arn: ${certificate}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: default-http-backend
      port:
        number: 80
